work with next auth

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-GOOGLE_ID=
-GOOGLE_SECRET=
+GOOGLE_ID="462818837227-ac2etp5t6r9g4kdgtvgg4g2cgcv3f5vd.apps.googleusercontent.com"
+GOOGLE_SECRET="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"
